jlink local configuration now working, after jlink plugin upgrade, version now follows Codion