@@ -13,27 +13,27 @@ configurations {
 dependencies {
     implementation project(':chinook-domain-api')
 
-    implementation "is.codion.jdk11:codion-swing-framework-ui:${codionVersion}"
-    implementation "is.codion.jdk11:codion-plugin-imagepanel:${codionVersion}"
-    implementation "is.codion.jdk11:codion-plugin-ikonli-foundation:${codionVersion}"
+    implementation "is.codion.jdk11:codion-swing-framework-ui:${version}"
+    implementation "is.codion.jdk11:codion-plugin-imagepanel:${version}"
+    implementation "is.codion.jdk11:codion-plugin-ikonli-foundation:${version}"
 
     implementation "org.pushing-pixels:radiance-substance:${radianceVersion}"
     implementation "org.pushing-pixels:radiance-substance-extras:${radianceVersion}"
 
-    runtimeOnly ("is.codion.jdk11:codion-plugin-logback-proxy:${codionVersion}") {
+    runtimeOnly ("is.codion.jdk11:codion-plugin-logback-proxy:${version}") {
         exclude group: 'com.sun.mail', module: 'javax.mail'
     }
 
     runtimeLocal project(':chinook-domain')
-    runtimeLocal "is.codion.jdk11:codion-framework-db-local:${codionVersion}"
-    runtimeLocal "is.codion.jdk11:codion-dbms-h2database:${codionVersion}"
+    runtimeLocal "is.codion.jdk11:codion-framework-db-local:${version}"
+    runtimeLocal "is.codion.jdk11:codion-dbms-h2database:${version}"
     runtimeLocal "com.h2database:h2:1.4.200"
 
-    runtimeRemote "is.codion.jdk11:codion-framework-db-rmi:${codionVersion}"
-    runtimeRemote "is.codion.jdk11:codion-framework-db-http:${codionVersion}"
+    runtimeRemote "is.codion.jdk11:codion-framework-db-rmi:${version}"
+    runtimeRemote "is.codion.jdk11:codion-framework-db-http:${version}"
 
-    testImplementation "is.codion.jdk11:codion-framework-db-local:${codionVersion}"
-    testImplementation "is.codion.jdk11:codion-dbms-h2database:${codionVersion}"
+    testImplementation "is.codion.jdk11:codion-framework-db-local:${version}"
+    testImplementation "is.codion.jdk11:codion-dbms-h2database:${version}"
     testImplementation "com.h2database:h2:1.4.200"
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
@@ -105,6 +105,28 @@ task runHttp(type: JavaExec) {
 }
 
 jlink {
+    imageName = "chinook-local"
+    configuration = 'runtimeLocal'
+    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    launcher {
+        name = 'chinook-local'
+        jvmArgs = [
+                "-Dcodion.client.connectionType=local",
+                "-Dcodion.db.url=jdbc:h2:mem:h2db",
+                "-Dcodion.db.initScripts=classpath:create_schema.sql",
+                "--add-reads", "is.codion.swing.framework.model=chinook.merged.module",//for json,
+                "--add-reads", "is.codion.framework.domain=is.codion.framework.demos.chinook.domain.api"//default methods
+        ]
+    }
+
+    jpackage {
+        installerType = "deb"
+        installerOptions = ['--linux-shortcut']
+    }
+}
+
+/*jlink {
     imageName = "chinook-remote"
     configuration = 'runtimeRemote'
     options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -139,5 +161,6 @@ jlink {
 
     jpackage {
         installerType = "deb"
+        installerOptions = ['--linux-shortcut']
     }
-}
+}*/
